--- a/glomosim/bin/config.in
+++ b/glomosim/bin/config.in
@@ -111,14 +111,14 @@ NUMBER-OF-NODES     9
 # updates its position based on the distance (in meters).
 #
 
-MOBILITY  NONE
+# MOBILITY  NONE
 
 # Random Waypoint and its required parameters.
 
-#MOBILITY RANDOM-WAYPOINT
-#MOBILITY-WP-PAUSE       30S
-#MOBILITY-WP-MIN-SPEED   0
-#MOBILITY-WP-MAX-SPEED   10
+MOBILITY RANDOM-WAYPOINT
+MOBILITY-WP-PAUSE       0S
+MOBILITY-WP-MIN-SPEED   0
+MOBILITY-WP-MAX-SPEED   10
 
 #MOBILITY TRACE
 #MOBILITY-TRACE-FILE ./mobility.in
