--- a/glomosim/bin/config.in
+++ b/glomosim/bin/config.in
@@ -269,8 +269,8 @@ NETWORK-OUTPUT-QUEUE-SIZE-PER-PRIORITY 100
 
 
 #ROUTING-PROTOCOL    BELLMANFORD
-ROUTING-PROTOCOL    AODV
-#ROUTING-PROTOCOL    DSR
+#ROUTING-PROTOCOL    AODV
+ROUTING-PROTOCOL    DSR
 #ROUTING-PROTOCOL    LAR1
 #ROUTING-PROTOCOL    WRP
 #ROUTING-PROTOCOL    FISHEYE
