--- a/glomosim/bin/app.conf
+++ b/glomosim/bin/app.conf
@@ -129,9 +129,9 @@
 #         <interval> <start time> <end time>
 
 CBR	0	30	0	512	0.5S	0S	0S
-#CBR 10 28 10000 512 2.5S 82.49S 199S
-#CBR 21 0  10000 512 0.8S 91.39S 248S
-#CBR 14 17 10000 512 1.1S 107.8S 274S
+CBR 10 30 10000 512 2.5S 82.49S 199S
+CBR 21 30  10000 512 0.8S 91.39S 248S
+CBR 14 30 10000 512 1.1S 107.8S 274S
 
 # 
 # where
