--- a/glomosim/bin/app.conf
+++ b/glomosim/bin/app.conf
@@ -1,8 +1,8 @@
 #CBR <src> <dest> <items to send> <item size> <interval> <start time> <end time>
 CBR	   0	   30	    0              512	       0.5S	       0S	          0S
 CBR 10 30 10000 512 2.5S 1.1S 0S
-CBR 0 32  10000 512 0.8S 1.2S 0S
-CBR 0 33 10000 512 1.1S 2.3S 0S
+#CBR 0 32  10000 512 0.8S 1.2S 0S
+#CBR 0 33 10000 512 1.1S 2.3S 0S
 
 
 # The traffic generators currently available are FTP,
